--- a/templates/java-spring/build.gradle
+++ b/templates/java-spring/build.gradle
@@ -21,24 +21,13 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-	maven { url "https://repo.spring.io/milestone" }
 }
 
-
-ext {
-	springCloudVersion = 'Greenwich.M1'
-}
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter-amqp')
-	implementation('org.springframework.cloud:spring-cloud-stream')
-	implementation('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testImplementation('org.springframework.cloud:spring-cloud-stream-test-support')
-}
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+	implementation('org.springframework.boot:spring-boot-starter-integration')
+	implementation('org.springframework.integration:spring-integration-mqtt')
+	implementation('org.springframework.integration:spring-integration-amqp')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
