--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/asyncapi/generator",
   "dependencies": {
-    "asyncapi": "^2.0.2",
+    "asyncapi": "^2.1.0",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
     "handlebars": "^4.0.6",
@@ -35,11 +35,11 @@
     "json-schema-ref-parser": "^5.1.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.1",
+    "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
     "openapi-sampler": "^1.0.0-beta.9",
     "project-name-generator": "^2.1.5",
-    "z-schema": "^3.18.2",
-    "minimatch": "^3.0.4"
+    "z-schema": "^3.18.2"
   },
   "devDependencies": {}
 }
