--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
   },
   "homepage": "https://github.com/asyncapi/generator",
   "dependencies": {
-    "asyncapi": "^2.1.0",
+    "ajv": "^6.10.0",
+    "asyncapi": "^2.2.0",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
-    "handlebars": "^4.0.6",
-    "js-yaml": "^3.8.3",
+    "handlebars": "^4.1.1",
+    "js-yaml": "^3.13.0",
     "json-schema-ref-parser": "^5.1.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
     "openapi-sampler": "^1.0.0-beta.9",
-    "project-name-generator": "^2.1.5",
-    "z-schema": "^3.18.2"
+    "project-name-generator": "^2.1.5"
   },
   "devDependencies": {}
 }
