--- a/test/docs/anyof.yml
+++ b/test/docs/anyof.yml
@@ -1,37 +1,29 @@
-asyncapi: '1.1.0'
+asyncapi: '2.0.0-rc1'
+id: 'https://github.com/asyncapi/asyncapi/examples/next/anyof.yml'
 info:
   title: AnyOf example
   version: '1.0.0'
 
-topics:
+channels:
   test:
     publish:
-      $ref: '#/components/messages/testMessages'
+      message:
+        $ref: '#/components/messages/testMessages'
 
 components:
   messages:
     testMessages:
-      headers:
-        type: object
-        properties:
-          header:
-            type: string
       payload:
-        anyOf:
+        anyOf: # anyOf in payload schema
           - $ref: "#/components/schemas/objectWithKey"
           - $ref: "#/components/schemas/objectWithKey2"
 
   schemas:
     objectWithKey:
-      oneOf:
-        - type: object
-          properties:
-            key31:
-              type: string
-        - type: object
-          properties:
-            key32:
-              type: string
+      type: object
+      properties:
+        key:
+          type: string
     objectWithKey2:
       type: object
       properties:
