--- a/test/docs/streetlights.yml
+++ b/test/docs/streetlights.yml
@@ -1,18 +1,25 @@
-asyncapi: '1.0.0'
+asyncapi: '2.0.0-rc1'
+id: 'urn:com:smartylighting:streetlights:server'
 info:
   title: Streetlights API
   version: '1.0.0'
   description: |
-    The Smartylighting Streetlights API allows you
-    to remotely manage the city lights.
+    The Smartylighting Streetlights API allows you to remotely manage the city lights.
+
+    ### Check out its awesome features:
+
+    * Turn a specific streetlight on/off 🌃
+    * Dim a specific streetlight 😎
+    * Receive real-time information about environmental lighting conditions 📈
   license:
     name: Apache 2.0
-    url: 'https://www.apache.org/licenses/LICENSE-2.0'
-baseTopic: smartylighting.streetlights.1.0
+    url: https://www.apache.org/licenses/LICENSE-2.0
+
 servers:
-  - url: test.mosquitto.org
-    scheme: mqtt
+  - url: api.streetlights.smartylighting.com:{port}
+    protocol: mqtt
     description: Test broker
+    baseChannel: smartylighting/streetlights/1/0
     variables:
       port:
         description: Secure connection (TLS) is available through port 8883.
@@ -20,19 +27,100 @@ servers:
         enum:
           - '1883'
           - '8883'
-topics:
-  event.lighting.measured:
-    x-service-name: measures
-    publish:
-      $ref: '#/components/messages/lightMeasured'
+    security:
+      - apiKey: []
+      - supportedOauthFlows:
+        - streetlights:on
+        - streetlights:off
+        - streetlights:dim
+      - openIdConnectWellKnown: []
+
+defaultContentType: application/json
+
+channels:
+  event/{streetlightId}/lighting/measured:
+    parameters:
+      - $ref: '#/components/parameters/streetlightId'
     subscribe:
-      $ref: '#/components/messages/lightMeasured'
+      summary: Receive information about environmental lighting conditions of a particular streetlight.
+      operationId: receiveLightMeasurement
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'lighting-measured'
+      message:
+        $ref: '#/components/messages/lightMeasured'
+
+  action/{streetlightId}/turn/on:
+    parameters:
+      - $ref: '#/components/parameters/streetlightId'
+    publish:
+      operationId: turnOn
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'turn-on'
+      message:
+        $ref: '#/components/messages/turnOnOff'
+
+  action/{streetlightId}/turn/off:
+    parameters:
+      - $ref: '#/components/parameters/streetlightId'
+    publish:
+      operationId: turnOff
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'turn-off'
+      message:
+        $ref: '#/components/messages/turnOnOff'
+
+  action/{streetlightId}/dim:
+    parameters:
+      - $ref: '#/components/parameters/streetlightId'
+    publish:
+      operationId: dimLight
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'dim'
+      message:
+        $ref: '#/components/messages/dimLight'
+
 components:
   messages:
     lightMeasured:
+      name: lightMeasured
+      title: Light measured
       summary: Inform about environmental lighting conditions for a particular streetlight.
+      contentType: application/json
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'message-light-measured'
       payload:
         $ref: "#/components/schemas/lightMeasuredPayload"
+    turnOnOff:
+      name: turnOnOff
+      title: Turn on/off
+      summary: Command a particular streetlight to turn the lights on or off.
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'message-turn-on-off'
+      payload:
+        $ref: "#/components/schemas/turnOnOffPayload"
+    dimLight:
+      name: dimLight
+      title: Dim light
+      summary: Command a particular streetlight to dim the lights.
+      traits:
+        - 
+          - $ref: '#/components/traits/docs'
+          - headerId: 'message-dim-light'
+      payload:
+        $ref: "#/components/schemas/dimLightPayload"
+
   schemas:
     lightMeasuredPayload:
       type: object
@@ -43,7 +131,79 @@ components:
           description: Light intensity measured in lumens.
         sentAt:
           $ref: "#/components/schemas/sentAt"
+    turnOnOffPayload:
+      type: object
+      properties:
+        command:
+          type: string
+          enum:
+            - on
+            - off
+          description: Whether to turn on or off the light.
+        sentAt:
+          $ref: "#/components/schemas/sentAt"
+    dimLightPayload:
+      type: object
+      properties:
+        percentage:
+          type: integer
+          description: Percentage to which the light should be dimmed to.
+          minimum: 0
+          maximum: 100
+        sentAt:
+          $ref: "#/components/schemas/sentAt"
     sentAt:
       type: string
       format: date-time
       description: Date and time when the message was sent.
+
+  securitySchemes:
+    apiKey:
+      type: apiKey
+      in: user
+      description: Provide your API key as the user and leave the password empty.
+    supportedOauthFlows:
+      type: oauth2
+      description: Flows to support OAuth 2.0
+      flows:
+        implicit:
+          authorizationUrl: 'https://authserver.example/auth'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        password:
+          tokenUrl: 'https://authserver.example/token'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        clientCredentials:
+          tokenUrl: 'https://authserver.example/token'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        authorizationCode:
+          authorizationUrl: 'https://authserver.example/auth'
+          tokenUrl: 'https://authserver.example/token'
+          refreshUrl: 'https://authserver.example/refresh'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+    openIdConnectWellKnown:
+      type: openIdConnect
+      openIdConnectUrl: 'https://authserver.example/.well-known'
+
+  parameters:
+    streetlightId:
+      name: streetlightId
+      description: The ID of the streetlight.
+      schema:
+        type: string
+
+  traits:
+    docs:
+      externalDocs:
+        url: https://company.com/docs#{{headerId}}
