--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "asyncapi-parser": "^0.3.5",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
-    "handlebars": "^4.1.2",
     "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^5.1.0",
     "lodash": "^4.17.15",
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
+    "nunjucks": "^3.2.0",
     "openapi-sampler": "^1.0.0-beta.9",
     "project-name-generator": "^2.1.5"
   },
