--- a/templates/java-spring/src/main/resources/application.yml
+++ b/templates/java-spring/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-{{#each asyncapi.servers as |server|}}
-  {{#compare server.scheme '===' 'amqp'}}
+{% for server in asyncapi.servers %}
+  {% if server.scheme === 'amqp' %}
 amqp:
   broker:
     host: localhost
@@ -7,19 +7,19 @@ amqp:
     username: guest
     password: guest
   exchange:
-{{#each ../../asyncapi.topics as |topic key|}}
-  {{#if topic.publish}}
-    {{topic.x-service-name}}: {{key}}
-  {{/if}}
-{{/each}}
+{% for topicName, topic in asyncapi.topics %}
+  {% if topic.publish %}
+    {{topic.x-service-name}}: {{topic}}
+  {% endif %}
+{% endfor %}
   queue:
-{{#each ../../asyncapi.topics as |topic key|}}
-  {{#if topic.subscribe}}
-    {{topic.x-service-name}}: {{key}}
-  {{/if}}
-{{/each}}
-  {{/compare}}
-  {{#compare server.scheme '===' 'mqtt'}}
+{% for topicName, topic in asyncapi.topics %}
+  {% if topic.subscribe %}
+    {{topic.x-service-name}}: {{topic}}
+  {% endif %}
+{% endfor %}
+  {% endif %}
+  {% if server.scheme === 'mqtt' %}
 mqtt:
   broker:
     host: tcp://{{server.url}}
@@ -27,8 +27,8 @@ mqtt:
     username:
     password:
   topic:
-{{#each ../../asyncapi.topics as |topic key|}}
-    {{topic.x-service-name}}Topic: {{key}}
-{{/each}}
-  {{/compare}}
-{{/each}}
+{% for topicName, topic in asyncapi.topics %}
+    {{topic.x-service-name}}Topic: {{topic}}
+{% endfor %}
+  {% endif %}
+{% endfor %}
