--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.2.0",
-    "openapi-sampler": "^1.0.0-beta.9",
-    "project-name-generator": "^2.1.5"
+    "openapi-sampler": "^1.0.0-beta.9"
   },
   "devDependencies": {}
 }
