--- a/test/docs/streetlights.yml
+++ b/test/docs/streetlights.yml
@@ -1,4 +1,4 @@
-asyncapi: '2.0.0-rc1'
+asyncapi: 'unstable'
 id: 'urn:com:smartylighting:streetlights:server'
 info:
   title: Streetlights API
@@ -15,17 +15,11 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0
 
-tags:
-  - name: actions
-    description: Action messages
-  - name: events
-    description: Event messages
-
 servers:
-  - url: api.streetlights.smartylighting.com:{port}
+  production:
+    url: api.streetlights.smartylighting.com:{port}
     protocol: mqtt
     description: Test broker
-    baseChannel: smartylighting/streetlights/1/0
     variables:
       port:
         description: Secure connection (TLS) is available through port 8883.
@@ -40,77 +34,55 @@ servers:
         - streetlights:off
         - streetlights:dim
       - openIdConnectWellKnown: []
-  - url: api.streetlights.smartylighting.com
-    protocol: amqp
-    protocolVersion: '0-9-1'
-    description: Secure connection (TLS) is available through port 8883, Secure connection not the one you expect though.
-    baseChannel: smartylighting/streetlights/1/0
 
 defaultContentType: application/json
 
 channels:
-  event/{streetlightId}/lighting/measured:
+  smartylighting/streetlights/1/0/event/{streetlightId}/lighting/measured:
+    description: The topic on which measured values may be produced and consumed.
     parameters:
-      - $ref: '#/components/parameters/streetlightId'
+      streetlightId:
+        $ref: '#/components/parameters/streetlightId'
     subscribe:
-      summary: Lighting conditions
-      description: |
-        This is a long description of the streetlight measured event. We can put as many things as we wish here. Even **HTML** and some lists:
-
-        * item 1
-        * item 2
-
+      summary: Receive information about environmental lighting conditions of a particular streetlight.
       operationId: receiveLightMeasurement
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'lighting-measured'
+        - $ref: '#/components/operationTraits/kafka'
       message:
         $ref: '#/components/messages/lightMeasured'
-      tags:
-      - name: events
 
-  action/{streetlightId}/turn/on:
+  smartylighting/streetlights/1/0/action/{streetlightId}/turn/on:
     parameters:
-      - $ref: '#/components/parameters/streetlightId'
+      streetlightId:
+        $ref: '#/components/parameters/streetlightId'
     publish:
       operationId: turnOn
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'turn-on'
+        - $ref: '#/components/operationTraits/kafka'
       message:
         $ref: '#/components/messages/turnOnOff'
-      tags:
-      - name: actions
 
-  action/{streetlightId}/turn/off:
+  smartylighting/streetlights/1/0/action/{streetlightId}/turn/off:
     parameters:
-      - $ref: '#/components/parameters/streetlightId'
+      streetlightId:
+        $ref: '#/components/parameters/streetlightId'
     publish:
       operationId: turnOff
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'turn-off'
+        - $ref: '#/components/operationTraits/kafka'
       message:
         $ref: '#/components/messages/turnOnOff'
-      tags:
-        - name: actions
 
-  action/{streetlightId}/dim:
+  smartylighting/streetlights/1/0/action/{streetlightId}/dim:
     parameters:
-      - $ref: '#/components/parameters/streetlightId'
+      streetlightId:
+        $ref: '#/components/parameters/streetlightId'
     publish:
       operationId: dimLight
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'dim'
+        - $ref: '#/components/operationTraits/kafka'
       message:
         $ref: '#/components/messages/dimLight'
-      tags:
-        - name: actions
 
 components:
   messages:
@@ -120,9 +92,7 @@ components:
       summary: Inform about environmental lighting conditions for a particular streetlight.
       contentType: application/json
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'message-light-measured'
+        - $ref: '#/components/messageTraits/commonHeaders'
       payload:
         $ref: "#/components/schemas/lightMeasuredPayload"
     turnOnOff:
@@ -130,9 +100,7 @@ components:
       title: Turn on/off
       summary: Command a particular streetlight to turn the lights on or off.
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'message-turn-on-off'
+        - $ref: '#/components/messageTraits/commonHeaders'
       payload:
         $ref: "#/components/schemas/turnOnOffPayload"
     dimLight:
@@ -140,17 +108,13 @@ components:
       title: Dim light
       summary: Command a particular streetlight to dim the lights.
       traits:
-        -
-          - $ref: '#/components/traits/docs'
-          - headerId: 'message-dim-light'
+        - $ref: '#/components/messageTraits/commonHeaders'
       payload:
         $ref: "#/components/schemas/dimLightPayload"
 
   schemas:
     lightMeasuredPayload:
       type: object
-      required:
-        - lumens
       properties:
         lumens:
           type: integer
@@ -164,8 +128,8 @@ components:
         command:
           type: string
           enum:
-            - 'on'
-            - 'off'
+            - on
+            - off
           description: Whether to turn on or off the light.
         sentAt:
           $ref: "#/components/schemas/sentAt"
@@ -222,16 +186,25 @@ components:
     openIdConnectWellKnown:
       type: openIdConnect
       openIdConnectUrl: 'https://authserver.example/.well-known'
-      description: Something here
 
   parameters:
     streetlightId:
-      name: streetlightId
       description: The ID of the streetlight.
       schema:
         type: string
 
-  traits:
-    docs:
-      externalDocs:
-        url: https://company.com/docs#{{headerId}}
+  messageTraits:
+    commonHeaders:
+      headers:
+        type: object
+        properties:
+          my-app-header:
+            type: integer
+            minimum: 0
+            maximum: 100
+
+  operationTraits:
+    kafka:
+      protocolInfo:
+        kafka:
+          applicationId: my-app-id
