--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "asyncapi-parser": "^0.3.5",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
+    "handlebars": "^4.1.2",
     "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^5.1.0",
     "lodash": "^4.17.15",
