--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "asyncapi-generator": "./cli.js",
     "ag": "./cli.js"
   },
+  "scripts": {
+    "docs": "jsdoc2md lib/generator.js > API.md"
+  },
   "preferGlobal": true,
   "bugs": {
     "url": "https://github.com/asyncapi/generator/issues"
@@ -27,11 +30,12 @@
   },
   "homepage": "https://github.com/asyncapi/generator",
   "dependencies": {
-    "ajv": "^6.10.0",
+    "ajv": "^6.10.2",
     "asyncapi": "^2.2.0",
     "asyncapi-parser": "^0.6.0",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
+    "jmespath": "^0.15.0",
     "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^5.1.0",
     "lodash": "^4.17.15",
@@ -41,5 +45,7 @@
     "nunjucks": "^3.2.0",
     "openapi-sampler": "^1.0.0-beta.9"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jsdoc-to-markdown": "^5.0.0"
+  }
 }
