--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "8"
 deploy:
   provider: script
-  script: "cp .npmrc.template $HOME/.npmrc && npm publish"
+  script: "cp .npmrc.template $HOME/.npmrc && npm install && npm test && npm publish"
   on:
     tags: true
