--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "jmespath": "^0.15.0",
     "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^5.1.0",
+    "klaw-sync": "^6.0.0",
     "lodash": "^4.17.15",
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
-    "mkdirp": "^0.5.1",
     "nunjucks": "^3.2.0",
     "openapi-sampler": "^1.0.0-beta.9"
   },
