Fix nonRenderableFiles in Nodejs template

--- a/templates/nodejs/.tp-config.json
+++ b/templates/nodejs/.tp-config.json
@@ -3,6 +3,6 @@
   "requiredParams": ["server"],
   "nonRenderableFiles": [
     "src/api/middlewares/*.*",
-    "lib/lib/config.js"
+    "src/lib/config.js"
   ]
 }
