--- a/templates/nodejs/package.json
+++ b/templates/nodejs/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^8.1.0",
     "hermesjs": "2.x",
     "hermesjs-router": "1.x",
     {% if asyncapi.server(params.server).protocol() === 'mqtt' -%}
