Added test dependencies for mocha and nyc.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ag": "./cli.js"
   },
   "scripts": {
-    "docs": "jsdoc2md lib/generator.js > API.md"
+    "docs": "jsdoc2md lib/generator.js > API.md",
+    "test": ""
   },
   "preferGlobal": true,
   "bugs": {
@@ -46,6 +47,8 @@
   },
   "devDependencies": {
     "chokidar": "^3.3.0",
-    "jsdoc-to-markdown": "^5.0.0"
+    "jsdoc-to-markdown": "^5.0.0",
+    "mocha": "6.2.2",
+    "nyc": "14.1.1"
   }
 }
