--- a/test/docs/nats/frontend.yml
+++ b/test/docs/nats/frontend.yml
@@ -68,7 +68,7 @@ channels:
       message:
         $ref: './components/messages.yml#/turnOnOffResponse'
     bindings:
-      $ref: './components/channel-bindings.yml#/smartylightingTurnOn'
+      $ref: './components/channel-bindings.yml#/smartylightingTurnOnRequester'
 
   smartylighting.streetlights.1.0.action.{streetlightId}.turn.off:
     parameters:
@@ -85,7 +85,7 @@ channels:
       message:
         $ref: './components/messages.yml#/turnOnOff'
     bindings:
-      $ref: './components/channel-bindings.yml#/smartylightingTurnOff'
+      $ref: './components/channel-bindings.yml#/smartylightingTurnOffRequester'
 
   smartylighting.streetlights.1.0.action.{streetlightId}.dim:
     parameters:
@@ -102,7 +102,7 @@ channels:
       message:
         $ref: './components/messages.yml#/dimLight'
     bindings:
-      $ref: './components/channel-bindings.yml#/smartylightingDim'
+      $ref: './components/channel-bindings.yml#/smartylightingDimRequester'
 
 components:
   securitySchemes:
