--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
   "homepage": "https://github.com/asyncapi/generator",
   "dependencies": {
     "ajv": "^6.10.2",
-    "asyncapi": "^2.2.0",
     "asyncapi-parser": "^0.12.0",
     "commander": "^2.12.2",
+    "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
     "jmespath": "^0.15.0",
     "js-yaml": "^3.13.1",
-    "json-schema-ref-parser": "^5.1.0",
     "klaw-sync": "^6.0.0",
     "lodash": "^4.17.15",
     "markdown-it": "^8.4.1",
