Add topicPrefix to Nodejs config file

--- a/templates/nodejs/config/common.yml
+++ b/templates/nodejs/config/common.yml
@@ -46,6 +46,7 @@ default:
         - {{ topic | toKafkaTopic }}
       {%- endfor %}
       topicSeparator: '__'
+      topicPrefix:
 {%- endif %}
 
 development:
