--- a/test/docs/streetlights.yml
+++ b/test/docs/streetlights.yml
@@ -16,23 +16,9 @@ info:
 
 servers:
   production:
-    url: test.mosquitto.org:{port}
+    url: mqtt://test.mosquitto.org
     protocol: mqtt
     description: Test broker
-    variables:
-      port:
-        description: Secure connection (TLS) is available through port 8883.
-        default: '1883'
-        enum:
-          - '1883'
-          - '8883'
-    security:
-      - apiKey: []
-      - supportedOauthFlows:
-        - streetlights:on
-        - streetlights:off
-        - streetlights:dim
-      - openIdConnectWellKnown: []
 
 defaultContentType: application/json
 
