Fix generation of host parameter for configuration
Added a post-generation hook that will remove the trailing ":{port}"
from the generated MQTT host configuration parameter in the
application.yml. Also changed the semantics of that host configuration
parameter by removing the prepended "tcp://" from the template and
adding a broker.scheme configuration parameter.

--- a/templates/java-spring/src/main/resources/application.yml
+++ b/templates/java-spring/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 {% set server = asyncapi.server(params.server) -%}
   {% if server.protocol() === 'amqp' -%}
 amqp:
+  # {{server.description()}}
   broker:
     host: localhost
     port: 5672
@@ -17,8 +18,10 @@ amqp:
   {%- endif -%}
   {% if server.protocol() === 'mqtt' -%}
 mqtt:
+  # {{server.description()}}
   broker:
-    host: tcp://{{server.url()}}
+    scheme: tcp
+    host: {{server.url()}}
     port: {{server.variable('port').defaultValue()}}
     username:
     password:
