--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "openapi-sampler": "^1.0.0-beta.9"
   },
   "devDependencies": {
+    "dir-compare": "^1.8.0",
     "jsdoc-to-markdown": "^5.0.0",
     "mocha": "6.2.2",
     "nyc": "14.1.1"
