--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chokidar": "^3.3.0",
     "jsdoc-to-markdown": "^5.0.0",
     "mocha": "6.2.2",
-    "nyc": "14.1.1"
+    "nyc": "14.1.1",
+    "dir-compare": "^1.8.0"
   }
 }
