--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ output
 out/
 
 
-./test/integration/templates/actual
-./test/templates/*
-!./test/templates/scripts
+test/integration/templates/actual
+test/templates/*
+!test/templates/scripts
+!test/templates/scripts/*
