--- a/templates/nats-ts/package.json
+++ b/templates/nats-ts/package.json
@@ -7,16 +7,24 @@
 	"scripts": {
 		"watch": "tsc --watch",
 		"build": "tsc",
-		"start": "node src/api/index.js"
+		"start": "node src/api/index.js",
+		"postinstall": "link-module-alias"
+	},
+	"_moduleAliasIgnoreWarning": true,
+	"_moduleAliases": {
+		"#messages": "./src/messages",
+		"#schemas": "./src/schema",
+		"#channels": "./src/channels"
 	},
 	"dependencies": {
+		"@types/uuid": "3.4.5",
+		"link-module-alias": "^1.2.0",
+		"msgpack-lite": "^0.1.26",
+		"nats": "^1.3.2",
 		"node-yaml-config": "0.0.5",
 		"typescript": "3.4.3",
-		"winston": "3.2.1",
-		"winston-daily-rotate-file": "3.10.0",
 		"uuid": "3.3.3",
-		"@types/uuid": "3.4.5",
-		"msgpack-lite": "^0.1.26",
-		"nats": "^1.3.2"
+		"winston": "3.2.1",
+		"winston-daily-rotate-file": "3.10.0"
 	}
 }
