--- a/test/docs/nats/components/channel-bindings.yml
+++ b/test/docs/nats/components/channel-bindings.yml
@@ -16,6 +16,8 @@ smartylightingTurnOff:
 smartylightingDim:
   nats:
     is: requestReply
+    requestReply:
+      is: requester
     queue:
       name: smartylightingDim
 
