--- a/templates/markdown/package.json
+++ b/templates/markdown/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@asyncapi/html-template",
+  "name": "@asyncapi/markdown-template",
   "version": "0.1.0",
-  "description": "HTML template for the AsyncAPI generator.",
+  "description": "Markdown template for the AsyncAPI generator.",
   "keywords": [
     "asyncapi",
     "generator",
-    "html",
+    "markdown",
     "template"
   ],
   "author": "Fran Mendez <fmvilas@gmail.com> (fmvilas.com)",
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
     "openapi-sampler": "^1.0.0-beta.15"
   }
